--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 REMAINING TASKS FOR VERSION 1.0:
 
+*   Add page and route to allow editing configuration file
 *   Add console info on startup, handle port selection (checking if available), clean up error logging
 *   Lock buttons on UI, provide working indicator
 *   Style the UI
