--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,9 @@
 REMAINING TASKS FOR VERSION 1.0:
 
-*   Test on Windows, run performance benchmarks
 *   Finish documentation for Math
-*   Style and improve UI 
+*   Style and improve UI
+*   Develop testing procedures
+*   Test on Windows, run performance benchmarks
 *   Test on MacOS
 
 FUTURE WORK IF TIME ALLOWS:
